# cse492r_w2020

./: README.md  pub_commands.txt  turtlemimic.launch
homeskies_gazebo/: CMakeLists.txt  package.xml
homeskies_gazebo/launch/: homeskies.launch  homeskies_navigation.launch
homeskies_gazebo/models/: arena.sdf
homeskies_gazebo/models/arena_interior/: model.config
homeskies_gazebo/worlds/: homeskies.world
robocup_arena/exterior/: model.config  model.sdf
robocup_arena/interior/: model.sdf
